[tool.poetry]
name = "mreschke-fusionauth"
version = "0.1.0"
license = "MIT"
authors = ["Matthew Reschke <mail@mreschke.com>"]
description = ""
readme = "README.md"
include = ["LICENSE"]
packages = [
    { include = "mreschke/fusionauth" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
uvicore = {path = "../framework", extras = ["database"], develop = true}

[tool.poetry.dev-dependencies]
pytest = "6.2.*"
pytest-cov = "2.11.*"
pytest-asyncio = "0.14.*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

